[package]
authors = ["Jason Kiniry <jason.kiniry@gmail.com>"]
name = "pathext"
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/jtk18/pathext"
repository = "https://github.com/jtk18/pathext"
readme = "README.md"
description = "A small path trait extension with some convenience methods."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
